Prevent overflow scrolling on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,11 +13,20 @@
 
 body {
   visibility: hidden;
-  overflow: hidden;
 
   &.loaded {
     visibility: visible;
   }
+}
+
+.no-scroll-wrapper {
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
 }
 
 .backdrop {
@@ -55,12 +64,13 @@ body {
 
 .svg-wrapper {
   min-width: 700px;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+  overflow: hidden;
 }
 
 .svg-scene {
